<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/mainFieldColor">

	<androidx.cardview.widget.CardView
		android:id="@+id/KapperCard"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:background="@color/mainFieldColor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/mainBackgroundColor">

			<ImageView
				android:id="@+id/kapperImg"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:contentDescription="@string/static_kapper_afbeelding"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:srcCompat="@tools:sample/avatars" />

			<TextView
				android:id="@+id/kapperNaam"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="4dp"
				android:text="@string/dynamic_kapperNaam"
				android:textColor="@color/mainTextColor"
				android:textSize="24sp"
				android:textStyle="bold"
				app:layout_constraintStart_toEndOf="@+id/kapperImg"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/slogan"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="4dp"
				android:text="@string/dynamic_slogan"
				android:textColor="@color/mainTextColor"
				android:textSize="16sp"
				app:layout_constraintStart_toEndOf="@+id/kapperImg"
				app:layout_constraintTop_toBottomOf="@+id/kapperNaam" />

			<ImageView
				android:id="@+id/starOn1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/rating_s1"
				app:layout_constraintStart_toEndOf="@+id/kapperImg"
				app:layout_constraintTop_toBottomOf="@+id/slogan"
				app:srcCompat="@android:drawable/btn_star_big_on" />

			<ImageView
				android:id="@+id/starOn2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/rating_s2"
				app:layout_constraintStart_toEndOf="@+id/starOn1"
				app:layout_constraintTop_toBottomOf="@+id/slogan"
				app:srcCompat="@android:drawable/btn_star_big_on" />

			<ImageView
				android:id="@+id/starOn3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/rating_s3"
				app:layout_constraintStart_toEndOf="@+id/starOn2"
				app:layout_constraintTop_toBottomOf="@+id/slogan"
				app:srcCompat="@android:drawable/btn_star_big_on" />

			<ImageView
				android:id="@+id/starOff1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/rating_s4"
				app:layout_constraintStart_toEndOf="@+id/starOn3"
				app:layout_constraintTop_toBottomOf="@+id/slogan"
				app:srcCompat="@android:drawable/btn_star_big_off" />

			<ImageView
				android:id="@+id/starOff2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:contentDescription="@string/rating_s5"
				app:layout_constraintStart_toEndOf="@+id/starOff1"
				app:layout_constraintTop_toBottomOf="@+id/slogan"
				app:srcCompat="@android:drawable/btn_star_big_off" />

			<TextView
				android:id="@+id/rating"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:text="@string/kapperRating"
				android:textColor="@color/mainTextColor"
				app:layout_constraintBottom_toBottomOf="@+id/starOff2"
				app:layout_constraintStart_toEndOf="@+id/starOff2"
				app:layout_constraintTop_toTopOf="@+id/starOff2" />


		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>